--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ packages = [{include = "frost"}]
 python = "^3.10"
 requests = "^2.28.2"
 pandas = { version = "^1.5.3", optional = true }
+python-dotenv = "^0.21.1"
 
 [tool.poetry.group.dev.dependencies]
 black = "^22.12.0"
@@ -19,11 +20,17 @@ flake8 = "^6.0.0"
 mypy = "^0.991"
 types-requests = "^2.28.11.7"
 bump2version = "^1.0.1"
+pytest = "^7.2.1"
+pytest-cov = "^4.0.0"
+pyogrio = "^0.5.1"
 nose = "^1.3.7"
 pylint = "^2.16.2"
 sphinx = "^6.1.3"
 "m2r" = "^0.3.1"
 twine = "^4.0.2"
+
+[tool.poetry.extras]
+pandas = ["pandas"]
 
 [tool.isort]
 profile = "black"
