--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ packages = [{include = "frost"}]
 [tool.poetry.dependencies]
 python = "^3.10"
 requests = "^2.28.2"
-pandas = { version = "^1.5.3", optional = true }
+pandas = "^1.5.3"
 python-dotenv = "^0.21.1"
 
 [tool.poetry.group.dev.dependencies]
@@ -28,9 +28,7 @@ pylint = "^2.16.2"
 sphinx = "^6.1.3"
 "m2r" = "^0.3.1"
 twine = "^4.0.2"
-
-[tool.poetry.extras]
-pandas = ["pandas"]
+datamodel-code-generator = {extras = ["http"], version="^0.22.0"}
 
 [tool.isort]
 profile = "black"
