the new and improved version
Signed-off-by: Lasse Lambrechts <lasse.lambrechts@bt.no>

--- a/.gitignore
+++ b/.gitignore
@@ -107,3 +107,7 @@ notebooks/Notebook.ipynb
 frosttypes/types.py
 frosttypes/fixed-types.py
 tmp/*
+frost-client.code-workspace
+observations.json
+observations.csv
+.DS_Store
